--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.16.3",
     "jquery": "^3.6.4",
