--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsdom": "^21.1.0",
     "lodash": "^4.17.21",
     "mongodb": "^5.1.0",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "node-fetch": "^2.6.9"
   }
 }
